# IN104

./: .gitignore  CMakeLists.txt  Makefile  Makefile..bash_aliases  README.md  a.out  build.bat  build.sh  loss.csv  main.c
Testing/: TAG
data/: area_price.csv  data.csv  height_weight.csv  x_6.9_3.2.txt
data/square_weights/: b_1.txt  b_2.txt  layer_0_biases.csv  layer_0_weights.csv  layer_1_biases.csv  layer_1_weights.csv  layer_2_biases.csv  layer_2_weights.csv  layer_3_biases.csv  layer_3_weights.csv  w_1.txt  w_2.txt
include/: ANN.h  LinearRegression.h  array.h  array_test.h  data.h  linearmodels.h  mathextra.h  metrics.h  plot.h  utils.h
log/: rayliblog.txt
src/: ANN.c  LinearRegression.c  array.c  array_test.c  data.c  linearmodels.c  main.c  mathextra.c  metrics.c  plot.c
